fix alignment of Featured Projects header in tablet and up

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,6 @@
 /********* DESKTOP max-width 1512px *********/
 @media (min-width: 1281px) {
   #root {
-    max-width: 1512px;
+    max-width: 2000px;
   } 
 }
