--- a/src/Components/BigHeadlines.css
+++ b/src/Components/BigHeadlines.css
@@ -1,4 +1,4 @@
-.blue, .white, .pink {
+.blue-left, .blue-center, .white, .pink {
     font-family: var(--heading-font);
     font-size: 32px;
     font-style: normal;
@@ -8,7 +8,7 @@
     margin-bottom: 0;
 }
 
-.blue {
+.blue-left, .blue-center {
     color: var(--primary-one);
 }
 
@@ -23,18 +23,22 @@
 /********* MEDIA QUERIES *********/
 /********* TABLETS *********/
 @media (min-width: 376px) {
-    .blue, .white, .pink {
+    .blue-left, .blue-center, .white, .pink {
         font-size: 56px;
+    }
+
+    .blue-left, .pink {
+        text-align: left;
     }
 }
 
 /********* DESKTOP *********/
 @media (min-width: 745px) {
-    .blue, .white, .pink {
+    .blue-left, .blue-center, .white, .pink {
         font-size: 80px;
     }
 
-    .pink {
+    .blue-left, .pink {
         text-align: left;
     }
 }
