--- a/src/Sections/Projects.css
+++ b/src/Sections/Projects.css
@@ -2,7 +2,6 @@
     display: flex;
     padding: 64px 16px;
     flex-direction: column;
-    align-items: center;
 }
 
 .project-list {
